--- a/src/App/index.css
+++ b/src/App/index.css
@@ -6,6 +6,7 @@ body {
 }
 
 .navbar {
+	box-sizing: border-box;
 	background: #dddddd;
 	width: 100%;
 	padding: 0.5rem 1rem;
@@ -94,11 +95,43 @@ body {
 }
 
 .menu-items {
+	box-sizing: border-box;
+	width: 100%;
+	padding: 1rem;
 	display: grid;
-	grid-template-rows: auto auto auto;
+	grid-template-columns: auto auto auto;
+	gap: 2rem;
 }
 
 .menu-item {
 	width: 100%;
 	overflow: hidden;
+	border-radius: 5px;
+	background: #ffffff;
+	text-align: center;
+}
+
+.menu-item-img {
+	width: 100%;
+	height: 20vw; /* funny hacky fix */
+	overflow: hidden;
+}
+
+.menu-item img {
+	width: 100%;
+}
+
+.menu-item hr {
+	border: solid 1px #f0f0f0;
+}
+
+.menu-item h4 {
+	font-size: 1.3rem;
+	font-weight: 500;
+	margin: 0.7rem;
+}
+
+.menu-item p {
+	width: calc(100% - 4rem);
+	padding: 0 2rem;
 }
